--- a/site.yml
+++ b/site.yml
@@ -13,3 +13,7 @@
 
     - name: Open Firewall
       firewalld: service=http permanent=true state=enabled immediate=true 
+    
+    - yum: name=git state=latest
+
+    - git: repo=https://github.com/petebowden/ansibledemo.git dest=/var/www/html/
